logs/readselector.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/readSelector-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/readselector'...
Compiling './lib/python3.5/site-packages/readselector/fileParser.py'...
***   File "./lib/python3.5/site-packages/readselector/fileParser.py", line 76
    print "Extracting reads from [%s %s]" % (files[i], files[i+1])
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/readselector/readSelector.py'...
***   File "./lib/python3.5/site-packages/readselector/readSelector.py", line 122
    print "Extracting from unpaired files..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/readselector/test'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
